--- a/leetcode/leetcode.vcxproj
+++ b/leetcode/leetcode.vcxproj
@@ -160,6 +160,7 @@
     <ClCompile Include="leetcode01-10.cpp" />
     <ClCompile Include="leetcode101-110.cpp" />
     <ClCompile Include="leetcode11-20.cpp" />
+    <ClCompile Include="leetcode111-120.cpp" />
     <ClCompile Include="leetcode21-30.cpp" />
     <ClCompile Include="leetcode31-40.cpp" />
     <ClCompile Include="leetcode41-50.cpp" />
