--- a/leetcode/leetcode.vcxproj
+++ b/leetcode/leetcode.vcxproj
@@ -163,6 +163,7 @@
     <ClCompile Include="leetcode11-20.cpp" />
     <ClCompile Include="leetcode111-120.cpp" />
     <ClCompile Include="leetcode121-130.cpp" />
+    <ClCompile Include="leetcode131-140.cpp" />
     <ClCompile Include="leetcode21-30.cpp" />
     <ClCompile Include="leetcode31-40.cpp" />
     <ClCompile Include="leetcode41-50.cpp" />
