--- a/leetcode/leetcode.vcxproj.filters
+++ b/leetcode/leetcode.vcxproj.filters
@@ -77,5 +77,8 @@
     <ClCompile Include="leetcode_public.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="leetcode131-140.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
