--- a/leetcode/leetcode.vcxproj
+++ b/leetcode/leetcode.vcxproj
@@ -164,6 +164,7 @@
     <ClCompile Include="leetcode111-120.cpp" />
     <ClCompile Include="leetcode121-130.cpp" />
     <ClCompile Include="leetcode131-140.cpp" />
+    <ClCompile Include="leetcode141-150.cpp" />
     <ClCompile Include="leetcode21-30.cpp" />
     <ClCompile Include="leetcode31-40.cpp" />
     <ClCompile Include="leetcode41-50.cpp" />
