update leetcode problem(algorithms) to 160

--- a/leetcode/leetcode.vcxproj.filters
+++ b/leetcode/leetcode.vcxproj.filters
@@ -89,5 +89,8 @@
     <ClCompile Include="common_algorithms.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="leetcode151-160.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
