--- a/leetcode/leetcode.vcxproj
+++ b/leetcode/leetcode.vcxproj
@@ -167,6 +167,7 @@
     <ClCompile Include="leetcode121-130.cpp" />
     <ClCompile Include="leetcode131-140.cpp" />
     <ClCompile Include="leetcode141-150.cpp" />
+    <ClCompile Include="leetcode151-160.cpp" />
     <ClCompile Include="leetcode21-30.cpp" />
     <ClCompile Include="leetcode31-40.cpp" />
     <ClCompile Include="leetcode41-50.cpp" />
