--- a/leetcode/leetcode.vcxproj
+++ b/leetcode/leetcode.vcxproj
@@ -168,6 +168,7 @@
     <ClCompile Include="leetcode131-140.cpp" />
     <ClCompile Include="leetcode141-150.cpp" />
     <ClCompile Include="leetcode151-160.cpp" />
+    <ClCompile Include="leetcode161-170.cpp" />
     <ClCompile Include="leetcode21-30.cpp" />
     <ClCompile Include="leetcode31-40.cpp" />
     <ClCompile Include="leetcode41-50.cpp" />
