--- a/leetcode/leetcode.vcxproj
+++ b/leetcode/leetcode.vcxproj
@@ -170,6 +170,7 @@
     <ClCompile Include="leetcode151-160.cpp" />
     <ClCompile Include="leetcode161-170.cpp" />
     <ClCompile Include="leetcode171-180.cpp" />
+    <ClCompile Include="leetcode181-190.cpp" />
     <ClCompile Include="leetcode21-30.cpp" />
     <ClCompile Include="leetcode31-40.cpp" />
     <ClCompile Include="leetcode41-50.cpp" />
