--- a/leetcode/leetcode.vcxproj
+++ b/leetcode/leetcode.vcxproj
@@ -172,6 +172,7 @@
     <ClCompile Include="leetcode171-180.cpp" />
     <ClCompile Include="leetcode181-190.cpp" />
     <ClCompile Include="leetcode191-200.cpp" />
+    <ClCompile Include="leetcode201-210.cpp" />
     <ClCompile Include="leetcode21-30.cpp" />
     <ClCompile Include="leetcode31-40.cpp" />
     <ClCompile Include="leetcode41-50.cpp" />
