--- a/leetcode/leetcode.vcxproj
+++ b/leetcode/leetcode.vcxproj
@@ -174,6 +174,7 @@
     <ClCompile Include="leetcode191-200.cpp" />
     <ClCompile Include="leetcode201-210.cpp" />
     <ClCompile Include="leetcode21-30.cpp" />
+    <ClCompile Include="leetcode211-220.cpp" />
     <ClCompile Include="leetcode31-40.cpp" />
     <ClCompile Include="leetcode41-50.cpp" />
     <ClCompile Include="leetcode51-60.cpp" />
