--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -13,6 +13,18 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="源文件\Array">
+      <UniqueIdentifier>{8f7cc73e-10f5-4af3-b0f0-ab8ec0f78293}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\LinkList">
+      <UniqueIdentifier>{2a2ecaed-1b90-4716-ad96-6bef84dd1f56}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\String">
+      <UniqueIdentifier>{c13098af-2edf-428f-8e88-826fa3225063}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="源文件\DC">
+      <UniqueIdentifier>{d7a92ef2-f2ae-45dd-a58a-1f96dba9ad58}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="pch.h">
@@ -21,94 +33,22 @@
     <ClInclude Include="public.h">
       <Filter>头文件</Filter>
     </ClInclude>
-    <ClInclude Include="leetcode.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="include.h">
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="common_algorithms.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="listnode.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="leetcode.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="leetcode11-20.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="leetcode01-10.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="leetcode21-30.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="leetcode31-40.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="leetcode41-50.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="leetcode51-60.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="leetcode61-70.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="leetcode71-80.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="leetcode81-90.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="leetcode_weekly_contest.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="leetcode91-100.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="leetcode101-110.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="leetcode111-120.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="leetcode121-130.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="leetcode_public.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="leetcode131-140.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="leetcode141-150.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="common_algorithms.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="leetcode151-160.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="leetcode161-170.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="leetcode171-180.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="leetcode181-190.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="leetcode191-200.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="leetcode201-210.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="leetcode211-220.cpp">
-      <Filter>源文件</Filter>
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="5.cpp">
+      <Filter>源文件\String</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
