--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -56,7 +56,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="14. Longest Common Prefix.cpp">
+    <ClCompile Include="16. 3Sum Closest.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
