--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -164,7 +164,12 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="16. 3Sum Closest.cpp" />
+    <ClCompile Include="17. Letter Combinations of a Phone Number.cpp" />
+    <ClCompile Include="18. 4Sum.cpp" />
+    <ClCompile Include="19. Remove Nth Node From End of List.cpp" />
+    <ClCompile Include="20. Valid Parentheses.cpp" />
+    <ClCompile Include="21. Merge Two Sorted Lists.cpp" />
+    <ClCompile Include="22. Generate Parentheses.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
