--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -170,6 +170,7 @@
     <ClCompile Include="20. Valid Parentheses.cpp" />
     <ClCompile Include="21. Merge Two Sorted Lists.cpp" />
     <ClCompile Include="22. Generate Parentheses.cpp" />
+    <ClCompile Include="23. Merge k Sorted Lists.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
