reupdate leetcode problem to 37

--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -164,23 +164,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="17. Letter Combinations of a Phone Number.cpp" />
-    <ClCompile Include="18. 4Sum.cpp" />
-    <ClCompile Include="19. Remove Nth Node From End of List.cpp" />
-    <ClCompile Include="20. Valid Parentheses.cpp" />
-    <ClCompile Include="21. Merge Two Sorted Lists.cpp" />
-    <ClCompile Include="22. Generate Parentheses.cpp" />
-    <ClCompile Include="23. Merge k Sorted Lists.cpp" />
-    <ClCompile Include="24. Swap Nodes in Pairs.cpp" />
-    <ClCompile Include="25. Reverse Nodes in k-Group.cpp" />
-    <ClCompile Include="26. Remove Duplicates from Sorted Array.cpp" />
-    <ClCompile Include="27. Remove Element.cpp" />
-    <ClCompile Include="28. Implement strStr().cpp" />
-    <ClCompile Include="29. Divide Two Integers.cpp" />
-    <ClCompile Include="30. Substring with Concatenation of All Words.cpp" />
-    <ClCompile Include="31. Next Permutation.cpp" />
-    <ClCompile Include="32. Longest Valid Parentheses.cpp" />
-    <ClCompile Include="33. Search in Rotated Sorted Array.cpp" />
+    <ClCompile Include="37. Sudoku Solver.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
