--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -164,7 +164,9 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="37. Sudoku Solver.cpp" />
+    <ClCompile Include="38. Count and Say.cpp" />
+    <ClCompile Include="39. Combination Sum.cpp" />
+    <ClCompile Include="40. Combination Sum II.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
