--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -56,19 +56,13 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="38. Count and Say.cpp">
+    <ClCompile Include="44. Wildcard Matching.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="39. Combination Sum.cpp">
+    <ClCompile Include="45. Jump Game II.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="40. Combination Sum II.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="41. First Missing Positive.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="42. Trapping Rain Water.cpp">
+    <ClCompile Include="46. Permutations.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
