--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -56,19 +56,43 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="371. Sum of Two Integers.cpp">
+    <ClCompile Include="48. Rotate Image.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="374. Guess Number Higher or Lower.cpp">
+    <ClCompile Include="49. Group Anagrams.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="383. Ransom Note.cpp">
+    <ClCompile Include="50. Pow(x, n).cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="387. First Unique Character in a String.cpp">
+    <ClCompile Include="51. N-Queens.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="389. Find the Difference.cpp">
+    <ClCompile Include="52. N-Queens II.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="53. Maximum Subarray.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="54. Spiral Matrix.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="55. Jump Game.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="56. Merge Intervals.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="57. Insert Interval.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="58. Length of Last Word.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="59. Spiral Matrix II.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="60. Permutation Sequence.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
