--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -164,19 +164,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="48. Rotate Image.cpp" />
-    <ClCompile Include="49. Group Anagrams.cpp" />
-    <ClCompile Include="50. Pow(x, n).cpp" />
-    <ClCompile Include="51. N-Queens.cpp" />
-    <ClCompile Include="52. N-Queens II.cpp" />
-    <ClCompile Include="53. Maximum Subarray.cpp" />
-    <ClCompile Include="54. Spiral Matrix.cpp" />
-    <ClCompile Include="55. Jump Game.cpp" />
-    <ClCompile Include="56. Merge Intervals.cpp" />
-    <ClCompile Include="57. Insert Interval.cpp" />
-    <ClCompile Include="58. Length of Last Word.cpp" />
-    <ClCompile Include="59. Spiral Matrix II.cpp" />
-    <ClCompile Include="60. Permutation Sequence.cpp" />
+    <ClCompile Include="67. Add Binary.cpp" />
+    <ClCompile Include="68. Text Justification.cpp" />
+    <ClCompile Include="69. Sqrt(x).cpp" />
+    <ClCompile Include="70. Climbing Stairs.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
