--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -56,43 +56,16 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="48. Rotate Image.cpp">
+    <ClCompile Include="67. Add Binary.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="49. Group Anagrams.cpp">
+    <ClCompile Include="68. Text Justification.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="50. Pow(x, n).cpp">
+    <ClCompile Include="69. Sqrt(x).cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="51. N-Queens.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="52. N-Queens II.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="53. Maximum Subarray.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="54. Spiral Matrix.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="55. Jump Game.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="56. Merge Intervals.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="57. Insert Interval.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="58. Length of Last Word.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="59. Spiral Matrix II.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="60. Permutation Sequence.cpp">
+    <ClCompile Include="70. Climbing Stairs.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
