--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -56,16 +56,7 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="67. Add Binary.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="68. Text Justification.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="69. Sqrt(x).cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-    <ClCompile Include="70. Climbing Stairs.cpp">
+    <ClCompile Include="71. Simplify Path.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
