--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -51,15 +51,21 @@
     <ClInclude Include="listnode.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="BinaryTree.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="75. Sort Colors.cpp">
+    <ClCompile Include="WC139-night.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="76. Minimum Window Substring.cpp">
+    <ClCompile Include="BinaryTree.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="ListNode.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
