update WC139-night 5010 and 5013

--- a/cpp/leetcode/leetcode.vcxproj
+++ b/cpp/leetcode/leetcode.vcxproj
@@ -165,6 +165,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="5010. Digit Count in Range.cpp" />
+    <ClCompile Include="5013. Index Pairs of a String.cpp" />
     <ClCompile Include="ListNode.cpp" />
     <ClCompile Include="WC139-night.cpp" />
     <ClCompile Include="BinaryTree.cpp" />
