--- a/cpp/leetcode/leetcode.vcxproj.filters
+++ b/cpp/leetcode/leetcode.vcxproj.filters
@@ -59,19 +59,19 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="WC139-night.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
     <ClCompile Include="BinaryTree.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
     <ClCompile Include="ListNode.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="5013. Index Pairs of a String.cpp">
+    <ClCompile Include="5077. Flip Columns For Maximum Number of Equal Rows.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
-    <ClCompile Include="5010. Digit Count in Range.cpp">
+    <ClCompile Include="5078. Adding Two Negabinary Numbers.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="5075. Number of Submatrices That Sum to Target.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
